--- a/src/assets/sass/components/layout/_sidebar.scss
+++ b/src/assets/sass/components/layout/_sidebar.scss
@@ -1,5 +1,5 @@
 .sidebar-container {
-    padding-top: 2rem;
+    padding-top: $mobile-hero-space;
     padding-bottom: $mobile-section-space;
 
     @media screen and (min-width: $tablet-breakpoint){
