--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -19,4 +19,5 @@ $body-line-height: 1.5rem;
 $header-height: 6.625rem;
 $mobile-section-space: 6.25rem;
 $mobile-block-space: 4rem;
+$mobile-hero-space: 2rem;
 $image-box-shadow: 10px 10px 40px -20px rgba($ocean-blue, 0.6);
