--- a/src/assets/sass/utils/_helpers.scss
+++ b/src/assets/sass/utils/_helpers.scss
@@ -1,5 +1,5 @@
 /* Utilities */
-.container {
+%container {
     display: block;
     width: 100%;
     max-width: 100%;
@@ -25,6 +25,10 @@
     .container {
         @include spacing(padding, left right, 0);
     }
+}
+
+.container {
+    @extend %container;
 }
 
 .image-container {
