updated partners section to be responsive

--- a/src/assets/sass/components/home/_hero.scss
+++ b/src/assets/sass/components/home/_hero.scss
@@ -24,7 +24,7 @@
         .content-container {
             text-align: center;
             padding-top: $mobile-hero-space;
-            padding-bottom: 4.375rem;
+            padding-bottom: $mobile-block-space;
 
             @media screen and (min-width: $tablet-breakpoint){
                 flex: 1 1 60%;
