--- a/src/assets/sass/components/how-it-works/_hero.scss
+++ b/src/assets/sass/components/how-it-works/_hero.scss
@@ -11,7 +11,7 @@ $gradient-space: 3.5rem;
         .content-container {
             text-align: center;
             padding-top: $mobile-hero-space;
-            padding-bottom: 4.375rem;
+            padding-bottom: $mobile-block-space;
 
             @media screen and (min-width: $tablet-breakpoint){
                 max-width: 21.5rem;
