--- a/src/assets/sass/components/how-it-works/_hero.scss
+++ b/src/assets/sass/components/how-it-works/_hero.scss
@@ -1,4 +1,4 @@
-$gradient-space: 3.5rem;
+$how-it-works-gradient-space: 3.5rem;
 
 .hero {
     .hero-content {
@@ -30,7 +30,7 @@ $gradient-space: 3.5rem;
             }
 
             .leadText {
-                margin-bottom: 2.5rem;
+                margin-bottom: 1.875rem;
             }
         }
     }
@@ -39,19 +39,19 @@ $gradient-space: 3.5rem;
         @media screen and (min-width: $tablet-breakpoint){
             position: relative;
             width: 100%;
-            max-width: calc(50% + (((100vw - (#{$tablet-container})) / 2) + #{$container-gutter}));
-            margin-right: calc(-1 * (((100vw - (#{$tablet-container})) / 2) + #{$container-gutter}));
-            padding-left: $gradient-space;
+            max-width: calc(50% + (((100vw - #{$tablet-container}) / 2) + #{$container-gutter}));
+            margin-right: calc(-1 * (((100vw - #{$tablet-container}) / 2) + #{$container-gutter}));
+            padding-left: $how-it-works-gradient-space;
         }
 
         @media screen and (min-width: $laptop-breakpoint){
-            max-width: calc(50% + (((100vw - (#{$laptop-container})) / 2) + #{$container-gutter}));
-            margin-right: calc(-1 * (((100vw - (#{$laptop-container})) / 2) + #{$container-gutter}));
+            max-width: calc(50% + (((100vw - #{$laptop-container}) / 2) + #{$container-gutter}));
+            margin-right: calc(-1 * (((100vw - #{$laptop-container}) / 2) + #{$container-gutter}));
         }
 
         @media screen and (min-width: $desktop-breakpoint){
-            max-width: calc(50% + (((100vw - (#{$desktop-container})) / 2) + #{$container-gutter}));
-            margin-right: calc(-1 * (((100vw - (#{$desktop-container})) / 2) + #{$container-gutter}));
+            max-width: calc(50% + (((100vw - #{$desktop-container}) / 2) + #{$container-gutter}));
+            margin-right: calc(-1 * (((100vw - #{$desktop-container}) / 2) + #{$container-gutter}));
         }
 
         &::after {
@@ -77,7 +77,7 @@ $gradient-space: 3.5rem;
         @media screen and (min-width: $tablet-breakpoint){
             display: block;
             position: absolute;
-            bottom: -$gradient-space;
+            bottom: -$how-it-works-gradient-space;
             right: 0;
             width: 100%;
             height: 15.875rem;
