updated how it works hero

--- a/src/assets/sass/components/how-it-works/_hero.scss
+++ b/src/assets/sass/components/how-it-works/_hero.scss
@@ -18,6 +18,7 @@ $how-it-works-gradient-space: 3.5rem;
                 text-align: left;
                 padding-top: 4.125rem;
                 padding-bottom: 6.25rem;
+                padding-right: 2rem;
             }
 
             h1 {
