--- a/src/assets/sass/components/common/_simple-cta.scss
+++ b/src/assets/sass/components/common/_simple-cta.scss
@@ -12,9 +12,12 @@
     }
 
     p {
-        text-align: left;
         margin-top: 3.5rem;
         margin-bottom: 4.375rem;
+
+        @media screen and (min-width: $tablet-breakpoint){
+            text-align: left;
+        }
 
         &.columns {
             @media screen and (min-width: $tablet-breakpoint){
