--- a/src/assets/sass/components/how-it-works/_hero.scss
+++ b/src/assets/sass/components/how-it-works/_hero.scss
@@ -86,7 +86,7 @@ $how-it-works-gradient-space: 3.5rem;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            z-index: -1;
+            z-index: $background-layer;
         }
     }
 }
