--- a/src/assets/sass/components/our-story/_hero.scss
+++ b/src/assets/sass/components/our-story/_hero.scss
@@ -109,7 +109,7 @@ $our-story-gradient-space: 3.5rem;
                 background-repeat: no-repeat;
                 background-size: contain;
                 background-position: center;
-                z-index: -1;
+                z-index: $background-layer;
             }
         }
 
@@ -144,7 +144,7 @@ $our-story-gradient-space: 3.5rem;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            z-index: -1;
+            z-index: $background-layer;
         }
     }
 }
