--- a/src/assets/sass/pages/_faq.scss
+++ b/src/assets/sass/pages/_faq.scss
@@ -11,7 +11,7 @@ main.faq {
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            z-index: -1;
+            z-index: $background-layer;
         }
     }
 
