--- a/src/assets/sass/components/home/_hero.scss
+++ b/src/assets/sass/components/home/_hero.scss
@@ -18,7 +18,7 @@
 
         .content-container, .image-container {
             position: relative;
-            z-index: 1;
+            z-index: $content-layer;
         }
 
         .content-container {
