--- a/src/assets/sass/components/how-it-works/_what-we-do.scss
+++ b/src/assets/sass/components/how-it-works/_what-we-do.scss
@@ -40,7 +40,7 @@
                         background-repeat: no-repeat;
                         background-size: contain;
                         background-position: center;
-                        z-index: -1;
+                        z-index: $background-layer;
                     }
                 }
             }
