--- a/src/assets/sass/components/layout/_sidebar.scss
+++ b/src/assets/sass/components/layout/_sidebar.scss
@@ -151,7 +151,7 @@
             top: 0;
             left: 0;
             opacity: 0;
-            z-index: -1;
+            z-index: $background-layer;
 
             @media screen and (min-width: $tablet-breakpoint){
                 position: static;
