--- a/src/assets/sass/utils/_mixins.scss
+++ b/src/assets/sass/utils/_mixins.scss
@@ -56,7 +56,7 @@
         width: 100%;
         height: 0.3125rem;
         background-color: $grey;
-        z-index: -1;
+        z-index: $background-layer;
     }
 
     &::after {
